[project]
name = "PyVantagePro_MarcoGos"
version = "0.3.9"
authors = [
  { name="Marco Gosselink", email="pypi@famgosselink.nl" },
]
description = "Extended PyVantagePro library"
license = {file = "COPYING"}
readme = "README.rst"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/MarcoGos/PyVantagePro"
Issues = "https://github.com/MarcoGos/PyVantagePro/issues"